- empty string in alt text WARNING changed to INFO. (total 179,161 occurrences)
- common decorative image indicators now removed from alt text with a WARNING and data-role="presentation" added. (total 6,288 occurrences)
- common inappropriate alt text messages now replaced with "" and an ERROR message. (total 16420 occurrences)
- added removal for aria-* and role attributes for EPUB2 files.


0.12.47 September 20, 2024
- because of a validator bug, the W3C recommended markup for images with `role="presentation"` fails w3c validation. We have made `data-role' a synonym for `role` in this context, allowing files that use the "presentation" role to do so without raising a validation error. https://github.com/validator/validator/issues/1599

0.12.45 September 18, 2024
- generated covers are now 1600x2400 to comply with Apple Books recommended minimum width and DP guidelines https://www.pgdp.net/wiki/DP_Official_Documentation:PP_and_PPV/Post-Processing_FAQ#Information_for_all_types_of_cover #234
- added accessibility metadata to EPUB3 content.ocf as suggested by ACE
- stub implementation to allow assertions of good alt text in config.
- added aria labels and roles to nav elements of EPUB3 content.ocf and toc.xhtml
- added lang attribute to wrapper file html elements as suggested by ACE
- fix opengraph urls in HTML metadata #235
- update cchardet to solve problems installing on python 3.11
- alt-text logging is restructured
    - empty alt-text warnings are now suppressed in figures
    - empty alt-text warnings are now suppressed when role='presentation' or aria-labelledby attributes are present
    - the alt text examination is moved from the Spider module to the HTMLParser module.
    - ids are assigned to all img elements to facilitate alt-text mitigation. 
    - alt-text logging is improved.
    - empty alt-text warnings now reference a newly added doc page: https://github.com/gutenbergtools/ebookmaker/blob/master/docs/alt-text.md
- bug in undeployed 0.12.44 fixed
