@@ -8,6 +8,7 @@
 - common decorative image indicators now removed from alt text with a WARNING and data-role="presentation" added. (total 6,288 occurrences)
 - common inappropriate alt text messages now replaced with "" and an ERROR message. (total 16420 occurrences)
 - added removal for aria-* and role attributes for EPUB2 files.
+- restore role attribute from data-role attributes for EPUB3 files since the EPUB validator doesn't have the html5 validator's bug.
 
 
 0.12.47 September 20, 2024
